# BladeLab

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  __init__.py  client.py  env_refactor_report.txt  inference.py  models.py  openenv.yaml  plot_reward_flowrate.py  pyproject.toml  requirements-server.txt  requirements.txt  search_feasible_design.py
.claude/: settings.local.json
.github/ISSUES/: 01-leakage-loss-formula.md  02-incidence-loss-formula.md  03-recirculation-loss-formula.md  04-api-rollout-success-logic.md  05-reward-grader-inconsistency.md  06-redundant-api-validation.md  07-physics-calculation-issues.md  08-code-quality-issues.md  09-openai-policy-robustness.md  10-minor-issues-backlog.md  11-runtime-env-template-and-docs.md  12-deployment-and-secret-injection-docs.md
api/: __init__.py  app.py  routes.py  schemas.py
env/: __init__.py  config.py  constraints.py  contraints.py  core_env.py  graders.py  models.py  physics.py  reward.py  tasks.py  velocity.py
scripts/: validate-submission.sh
server/: __init__.py  app.py  turbodesigner_environment.py
tests/: test_api.py  test_env.py  test_server_app.py
